# Real-time-dashboard

./: README.md
sensor-dashboard/: app.py  pyproject.toml  test_app.py  utils.py
sensor-dashboard/templates/: base.html  chart_data.html  index.html
