[project]
name = "sensor-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arel>=0.3.0",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "sse-starlette>=3.0.2",
    "uvicorn>=0.35.0",
]
